--- a/royale beuaty/style.css
+++ b/royale beuaty/style.css
@@ -122,14 +122,88 @@ i#burguer > :hover {
 }
 
 footer {
-    background-color: var(--cor3);    
-    margin: 0px;
-    padding: 10px;
-    text-align: center;
-    font-size: 10px;
-    color: white;
+    width: 100%;
+    min-height: 250px;
+    display: flex;
+    background-color: rgb(41, 40, 40);
 }
 
+footer .boxs {
+    width: 320px;
+    min-height: 150px;
+    padding: 20px;    
+}
+
+footer .boxs:nth-child(4)
+{
+  width: 300px;
+}
+
+.boxs h2 {
+  color:  rgb(204, 199, 199);
+  margin-bottom: 10px;
+  font-size: 20px;
+}
+
+.boxs h3 {
+  color:  rgb(204, 199, 199);
+  margin-bottom: 10px;
+  font-weight: lighter;
+}
+
+.boxs ul li {
+  margin: 10px 0px;
+  list-style: none;
+}
+
+.boxs ul li a {
+    color:  rgb(204, 199, 199);
+    text-decoration: none;
+      
+}
+
+@media (max-width: 950px)
+{
+  footer {
+    flex-direction: column;
+  }
+
+  footer .boxs{
+    width: 100%;
+    text-align: center;
+  }
+
+  footer .boxs:nth-child(4)
+  {
+    width: 100%;
+  }
+
+}
+
+
+
+.footer {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 20px ;
+}
+
+.footer .sociais {
+  display: flex
+}
+
+.sociais .sociais{
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  
+
+
+} 
 article > p {
     font-family: open sans;
     text-align: center;
