--- a/royale beuaty/style.css
+++ b/royale beuaty/style.css
@@ -200,10 +200,18 @@ footer .boxs:nth-child(4)
   height: 40px;
   text-align: center;
   line-height: 40px;
+}
   
+.direitos {
+  background-color: rgb(41, 40, 40);  
+  width: 100%;
+  height: 40px;
+  text-align: center;
+  display: flex;
+  color:  rgb(255, 255, 255);
 
+}
 
-} 
 article > p {
     font-family: open sans;
     text-align: center;
