--- a/royale beuaty/style.css
+++ b/royale beuaty/style.css
@@ -44,8 +44,8 @@ header {
     background-color: #B95E65;
     width: 100%;
     height: 500px;
-    background-size: contain;
-    background-repeat: no-repeat;
+    
+    
 }
 
 .header-2 {
@@ -56,6 +56,9 @@ header {
   background-repeat: no-repeat;
 }
 
+.logocabeca {
+  align-items: center;
+}
 
 .header-3 {
   background-color: var(--cor3);
@@ -68,15 +71,7 @@ header {
 
 
 
-.social-icons {
-  width: 45px;
-  height: 45px;
-  display: flex;
-  background-color: var(--cor7);
-  margin-left: -50px;
-  margin-top: 10px;
- 
-}
+
 
 .capa {
   display: flex;
@@ -131,7 +126,9 @@ footer {
 footer .boxs {
     width: 320px;
     min-height: 150px;
-    padding: 20px;    
+    padding: 10px;   
+    margin: 10px; 
+    
 }
 
 footer .boxs:nth-child(4)
@@ -192,7 +189,7 @@ footer .boxs:nth-child(4)
 }
 
 .footer .sociais {
-  display: flex
+  display: flex;
 }
 
 .sociais .sociais{
@@ -203,14 +200,15 @@ footer .boxs:nth-child(4)
 }
   
 .direitos {
+  display: inline-block;
   background-color: rgb(41, 40, 40);  
   width: 100%;
   height: 40px;
+  padding: 10px;
   text-align: center;
-  display: flex;
-  color:  rgb(255, 255, 255);
-
+  color:  rgb(204, 199, 199);
 }
+
 
 article > p {
     font-family: open sans;
